[package]
name = "random-tag"
version = "1.0.0-beta.3"
edition = "2021"
rust-version = "1.73"
license = "MIT"
authors = ["Gleb Chipiga <gleb.chipiga@gmail.com>"]
keywords = ["cli", "random", "random-generation"]
categories = ["command-line-interface", "command-line-utilities"]
description = "Generate random tags"
repository = "https://github.com/gleb-chipiga/random-tag"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["default", "derive", "cargo"] }
clap_complete = "4.5"
csv = "1"
dialoguer = "0.11"
dirs = "5"
itertools = "0.13"
rand = "0.8"
redb = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "parsing"] }
serde = { version = "1.0.203", features = ["derive"] }

[profile.release]
strip = true
